--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "flexslider": "^2.7.2",
     "fontawesome-4.7": "^4.7.0",
     "jquery": "^3.6.0"
   }
