--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack"
+    "dev": "webpack",
+    "serve": "webpack serve"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
     "flexslider": "^2.7.2",
     "fontawesome-4.7": "^4.7.0",
@@ -24,13 +26,17 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
+    "expose-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   }
 }
