--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
+    "eslint": "^8.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "expose-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
